--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,7 +1,7 @@
 /* Webfont: Billion Reach */
 @font-face {
   font-family: 'BillionReach';
-  src: url('billion_reach/BillionReach.otf') format('opentype');
+  src: url('./billion_reach/BillionReach.otf') format('opentype');
   font-style: normal;
   font-weight: normal;
   text-rendering: optimizeLegibility;
