--- a/styles.css
+++ b/styles.css
@@ -35,11 +35,29 @@ body * {
   padding: 10px 20px;
   border-radius: 10px;
   width: calc(100% - 40px);
-  box-shadow: inset 1px 1px 6px #c9cccf, inset -1px -1px 6px #ffffff;
+  box-shadow: inset 1px 1px 6px #cbced1, inset -1px -1px 6px #ffffff;
+}
+#beauty > form > input:focus {
+  border: none;
+  outline: none;
 }
 
 #beauty > canvas {
   width: 100%;
+  font-family: 'BillionReach';
+}
+
+#beauty > button {
+  border: none;
+  display: block;
+  margin: 0 auto;
+  padding: 10px 20px;
+  border-radius: 10px;
+  background-color: #ecf0f3;
+  box-shadow: -6px -6px 10px #ffffff, 6px 6px 10px #cbced1;
+}
+#beauty > button:active {
+  box-shadow: inset -4px -4px 8px #ffffff, inset 8px 8px 16px #cbced1;
 }
 
 @media (max-width: 550px) {
